--- a/BOWRobot-master/gradle/wrapper/gradle-wrapper.properties
+++ b/BOWRobot-master/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,5 @@
-#Sat Jan 18 11:08:23 EST 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.0.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=permwrapper/dists
-zipStorePath=permwrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.0.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=permwrapper/dists
